--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,6 @@ ol {
   justify-content: space-evenly;
   align-items: end;
   width: 1140px;
-  height: 534px;
 }
 
 .content__details {
@@ -114,6 +113,7 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 30px;
+  padding: 0 3px;
 }
 
 .content__video-card {
@@ -134,17 +134,13 @@ ol {
 
 .search-form__fieldset-title {
   margin-bottom: 5px;
-  font-family: Fira Sans Condensed;
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: normal;
   font-size: 18px;
 }
 
 .search-form__fieldset {
   border: none;
-}
-
-.content__list {
-  padding: 0 3px;
 }
 
 .content__accent {
@@ -155,6 +151,10 @@ ol {
   display: block;
   color: #fff;
   text-decoration: none;
+}
+
+.content__card-link_current {
+  background-color: #545050;
 }
 
 .content__card-link:active {
@@ -228,13 +228,9 @@ ol {
   outline-offset: 1px;
 }
 
-.search-form__label:hover input[type="checkbox"] ~ .search-form__label-text {
+ .search-form__label:hover .search-form__label-text {
   text-decoration: underline;
   text-decoration-skip-ink: none;
-}
-
-.search-form__label > search-form__textfield:hover {
-  text-decoration: none;
 }
 
 .search-form__textfield {
@@ -281,6 +277,7 @@ ol {
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: bold;
   font-size: 18px;
+  min-height: 34px;
   background-color: transparent;
   cursor: pointer;
 }
@@ -306,12 +303,10 @@ ol {
 .search-form__submit-button {
   align-self: flex-end;
   width: 194px;
-  height: 34px;
   padding: 6px 0;
 }
 
 .more-button {
   width: 100%;
-  height: 34px;
   padding: 6px 0;
 }
